--- a/panier.css
+++ b/panier.css
@@ -1,11 +1,11 @@
-/* General Reset */
+
 body,
 h2,
 p,
 button {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: Georgia, serif;
     box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ body {
     line-height: 1.5;
 }
 
-/* Container */
+
 .container {
     width: 90%;
     max-width: 1200px;
@@ -27,7 +27,7 @@ body {
     border-radius: 8px;
 }
 
-/* Cart Content */
+
 .cart-content {
     margin-top: 20px;
 }
@@ -35,10 +35,12 @@ body {
 .cart-content h2 {
     font-size: 24px;
     margin-bottom: 20px;
-    text-align: center;
-    color: #4CAF50;
+    margin-left: 20px;
+    color: #000000;
 }
-
+#link{
+margin-left:85%;
+}
 #cart-items {
     margin-bottom: 20px;
 }
@@ -64,25 +66,14 @@ body {
     border-top: 1px solid #ddd;
 }
 
-.total-price {
+#total-amount {
     font-size: 20px;
     font-weight: bold;
+    margin-left:80% ;
 }
 
-.checkout-btn {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-}
 
-.checkout-btn:hover {
-    background-color: #45a049;
-}
+
 
 /* Cart Item Row */
 .cart-item-row {
@@ -98,7 +89,7 @@ body {
 
 .quantity-cell button {
     padding: 5px 10px;
-    margin: 0 5px;
+    margin: 2 5px;
     border: 1px solid #ccc;
     background-color: #fff;
     cursor: pointer;
